<resources>
    <string name="app_name">Prowadź Patryk</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error_unable_to_load_suggest_locations">Błąd przy pobieraniu proponowanych lokalizacji</string>
    <string name="error_unable_to_conect">Nie można połączyć się z serwerem.</string>
    <string name="from">Z</string>
    <string name="location_gps">Użyj obecnego położenia.</string>
    <string name="to">Do</string>
    <string name="permission_denied_gps">Nie zezwolono na korzystanie z GPS.</string>
    <string name="searching_position">Trwa szukanie Twojego położenia...</string>
    <string name="error_no_location_provider">Nie można określić Twojej pozycji. Sprawdź swój GPS.</string>
    <string name="time_and_date">Czas i data</string>
    <string name="time">Czas</string>
    <string name="date">Data</string>
    <string name="less">mniej</string>
    <string name="more">więcej</string>
    <string name="now">Teraz</string>
    <string name="today">Dzisiaj</string>
    <string name="cancel">Anuluj</string>
    <string name="ok">Zatwierdź</string>
    <string name="search">Szukaj</string>
    <string name="error_invalid_to">Niepoprawne miejsce docelowe</string>
    <string name="error_invalid_from">Niepoprawne miejsce rozpoczęcia</string>
    <string name="error_unable_to_load_trips">Problem przy pobieraniu połączeń</string>
    <string name="products">Środki transportu</string>
    <string name="products_preferences_dialog_title">Wybierz środki transportu</string>
    <string name="walk">Pieszo</string>
    <string name="tram">Tramwaj</string>
    <string name="regional_train">SKM</string>
    <string name="cable_car">Trolejbus</string>
    <string name="transit">tranzyt</string>
    <string name="bus">Autobus</string>
    <string name="rail">Pociąg</string>
    <string name="about_app">O aplikacji</string>
    <string name="leave_in">Wyjdź za</string>
    <string name="duration_text">czas całkowity</string>
    <string name="interchanges">przesiadki:</string>
    <string name="error_loading_trips">Nic tu jeszcze nie ma.\nSpróbuj coś wyszukać.</string>
    <string name="error_loading_trips_empty_itineraries">Nie znaleziono żadnych tras.</string>
    <string name="minutes">min.</string>
    <string name="github">Github</string>
    <string name="author">Autor</string>
    <string name="patryk_cyrzan">Patryk Cyrzan</string>
    <string name="patryk_cyrzan_mail">patrykcyrzan@gmail.com</string>
    <string name="patryk_cyrzan_phone">515 108 743</string>
    <string name="githubPageLoading">Otwieranie strony. Proszę czekać...</string>

    <string-array name="icon_strings">
        <item>M215.008,103.299L113.906,2.196c-2.929-2.928-7.678-2.928-10.606,0L2.197,103.299c-2.929,2.93-2.929,7.678,0,10.607
		l101.103,101.103c1.464,1.464,3.384,2.196,5.303,2.196c1.919,0,3.839-0.732,5.303-2.196l101.103-101.103
		C217.938,110.976,217.938,106.228,215.008,103.299z M108.603,199.098l-90.496-90.496l90.496-90.496l90.496,90.496L108.603,199.098z</item>
        <item>M121.998,81.07h-21.298c-11.633,0-21.098,9.465-21.098,21.099v39.406c0,4.143,3.358,7.5,7.5,7.5c4.142,0,7.5-3.357,7.5-7.5
		v-39.406c0-3.363,2.735-6.099,6.098-6.099h21.298l-6.217,6.216c-2.929,2.929-2.929,7.678-0.001,10.606
		c1.465,1.465,3.384,2.197,5.304,2.197c1.919,0,3.839-0.732,5.303-2.196l19.021-19.02c1.406-1.406,2.197-3.314,2.197-5.304
		c0-1.989-0.79-3.897-2.197-5.304l-18.942-18.94c-2.93-2.928-7.678-2.929-10.607,0.001c-2.929,2.929-2.928,7.678,0.001,10.606
		L121.998,81.07z</item>
    </string-array>

    <integer-array name="icon_colors">
        <item>@color/black</item>
        <item>@color/black</item>
    </integer-array>
</resources>
