<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/content_slide_up_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:paddingRight="@dimen/activity_horizontal_margin"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                tools:showIn="@layout/fragment_map_with_form">

    <RelativeLayout
            android:id="@+id/slideView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:background="@drawable/layout_rounded_corners">

        <pl.cyrzan.prowadzpatryk.ui.common.views.inputWithGps.LocationGpsInput
                android:id="@+id/locationGpsInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:placeholder="@string/from">

        </pl.cyrzan.prowadzpatryk.ui.common.views.inputWithGps.LocationGpsInput>

        <pl.cyrzan.prowadzpatryk.ui.common.views.input.LocationInput
                android:id="@+id/locationInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/locationGpsInput"
                app:placeholder="@string/to"/>

        <LinearLayout
                android:id="@+id/more_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/locationInput"
                android:orientation="vertical">

            <pl.cyrzan.prowadzpatryk.ui.common.views.dateandtimeview.TimeAndDateView
                    android:id="@+id/time_and_date_line_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
            </pl.cyrzan.prowadzpatryk.ui.common.views.dateandtimeview.TimeAndDateView>

            <include
                    android:id="@+id/products_card_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    layout="@layout/products_card"
                    />

        </LinearLayout>

        <Button
                android:id="@+id/show_more_button"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_below="@+id/more_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


        <Button
                android:id="@+id/search_button"
                android:layout_below="@+id/more_layout"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_centerHorizontal="true"
                android:text="@string/search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

    </RelativeLayout>





</RelativeLayout>