<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="pl.cyrzan.prowadzpatryk.ui.about.AboutActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

    <include
            android:id="@+id/toolbarLayout"
            layout="@layout/toolbar_other_screens"/>

        <android.support.v7.widget.CardView
                android:id="@+id/color_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:layout_marginLeft="@dimen/mal_baseline_half"
                android:layout_marginStart="@dimen/mal_baseline_half"
                android:layout_marginRight="@dimen/mal_baseline_half"
                android:layout_marginEnd="@dimen/mal_baseline_half"
                android:layout_marginTop="@dimen/mal_baseline_half"
                android:paddingLeft="@dimen/mal_baseline_half"
                android:paddingStart="@dimen/mal_baseline_half"
                android:paddingRight="@dimen/mal_baseline_half"
                android:paddingEnd="@dimen/mal_baseline_half"
                android:paddingTop="@dimen/mal_baseline"
                android:paddingBottom="@dimen/mal_baseline"
                app:cardCornerRadius="@dimen/mal_card_radius"
                app:cardElevation="@dimen/mal_card_elevation"
                app:cardPreventCornerOverlap="false"
                app:cardUseCompatPadding="true">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/mal_baseline"
                        android:layout_marginStart="@dimen/mal_baseline"
                        android:layout_marginRight="@dimen/mal_baseline"
                        android:layout_marginEnd="@dimen/mal_baseline"
                        android:layout_marginTop="@dimen/mal_baseline"
                        android:layout_marginBottom="@dimen/mal_baseline_half"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        android:text="@string/author"
                        tools:text="@string/author" />

                <LinearLayout
                        xmlns:android="http://schemas.android.com/apk/res/android"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="@dimen/mal_baseline_half"
                        android:paddingBottom="@dimen/mal_baseline_half"
                        android:orientation="horizontal">

                    <ImageView
                            android:layout_width="@dimen/mal_action_item_image_width"
                            android:layout_height="@dimen/mal_action_action_item_image_height"
                            android:layout_gravity="center"
                            android:layout_marginEnd="@dimen/mal_baseline_half"
                            android:layout_marginLeft="@dimen/mal_baseline"
                            android:layout_marginRight="@dimen/mal_baseline_half"
                            android:layout_marginStart="@dimen/mal_baseline"
                            android:src="@drawable/ic_person"
                            android:adjustViewBounds="false"
                            android:cropToPadding="false"
                            android:scaleType="centerInside" />

                    <TextView
                            android:id="@+id/color_text"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/mal_action_action_item_image_height"
                            android:text="@string/patryk_cyrzan"
                            android:layout_marginEnd="@dimen/mal_baseline"
                            android:layout_marginLeft="@dimen/mal_baseline"
                            android:layout_marginRight="@dimen/mal_baseline"
                            android:layout_marginStart="@dimen/mal_baseline"
                            android:layout_gravity="center_vertical"
                            android:paddingLeft="@dimen/mal_baseline"
                            android:gravity="center_vertical"
                            tools:text="@string/patryk_cyrzan"
                            android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

                </LinearLayout>

                <LinearLayout
                        xmlns:android="http://schemas.android.com/apk/res/android"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="@dimen/mal_baseline_half"
                        android:paddingBottom="@dimen/mal_baseline_half"
                        android:orientation="horizontal">

                    <ImageView
                            android:layout_width="@dimen/mal_action_item_image_width"
                            android:layout_height="@dimen/mal_action_action_item_image_height"
                            android:layout_gravity="center"
                            android:layout_marginEnd="@dimen/mal_baseline_half"
                            android:layout_marginLeft="@dimen/mal_baseline"
                            android:layout_marginRight="@dimen/mal_baseline_half"
                            android:layout_marginStart="@dimen/mal_baseline"
                            android:src="@drawable/ic_mail"
                            android:adjustViewBounds="false"
                            android:cropToPadding="false"
                            android:scaleType="centerInside" />

                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/mal_action_action_item_image_height"
                            android:text="@string/patryk_cyrzan_mail"
                            android:layout_marginEnd="@dimen/mal_baseline"
                            android:layout_marginLeft="@dimen/mal_baseline"
                            android:layout_marginRight="@dimen/mal_baseline"
                            android:layout_marginStart="@dimen/mal_baseline"
                            android:layout_gravity="center_vertical"
                            android:paddingLeft="@dimen/mal_baseline"
                            android:gravity="center_vertical"
                            tools:text="@string/patryk_cyrzan_mail"
                            android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

                </LinearLayout>

                <LinearLayout
                        xmlns:android="http://schemas.android.com/apk/res/android"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="@dimen/mal_baseline_half"
                        android:paddingBottom="@dimen/mal_baseline_half"
                        android:orientation="horizontal">

                    <ImageView
                            android:layout_width="@dimen/mal_action_item_image_width"
                            android:layout_height="@dimen/mal_action_action_item_image_height"
                            android:layout_gravity="center"
                            android:layout_marginEnd="@dimen/mal_baseline_half"
                            android:layout_marginLeft="@dimen/mal_baseline"
                            android:layout_marginRight="@dimen/mal_baseline_half"
                            android:layout_marginStart="@dimen/mal_baseline"
                            android:src="@drawable/ic_phone"
                            android:adjustViewBounds="false"
                            android:cropToPadding="false"
                            android:scaleType="centerInside" />

                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/mal_action_action_item_image_height"
                            android:text="@string/patryk_cyrzan_phone"
                            android:layout_marginEnd="@dimen/mal_baseline"
                            android:layout_marginLeft="@dimen/mal_baseline"
                            android:layout_marginRight="@dimen/mal_baseline"
                            android:layout_marginStart="@dimen/mal_baseline"
                            android:layout_gravity="center_vertical"
                            android:paddingLeft="@dimen/mal_baseline"
                            android:gravity="center_vertical"
                            tools:text="@string/patryk_cyrzan_phone"
                            android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

                </LinearLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
