<?xml version="1.0" encoding="utf-8"?>
<merge
        xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:tools="http://schemas.android.com/tools"
       xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.CardView
            android:id="@+id/time_and_date_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/mal_baseline_half"
            android:layout_marginStart="@dimen/mal_baseline_half"
            android:layout_marginRight="@dimen/mal_baseline_half"
            android:layout_marginEnd="@dimen/mal_baseline_half"
            android:layout_marginTop="@dimen/mal_baseline_half"
            android:paddingLeft="@dimen/mal_baseline_half"
            android:paddingStart="@dimen/mal_baseline_half"
            android:paddingRight="@dimen/mal_baseline_half"
            android:paddingEnd="@dimen/mal_baseline_half"
            android:paddingTop="@dimen/mal_baseline"
            android:paddingBottom="@dimen/mal_baseline"
            app:cardCornerRadius="@dimen/mal_card_radius"
            app:cardElevation="@dimen/mal_card_elevation"
            app:cardPreventCornerOverlap="false"
            app:cardUseCompatPadding="true"
            >

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

            <TextView
                    android:id="@+id/mal_list_card_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/mal_baseline"
                    android:layout_marginStart="@dimen/mal_baseline"
                    android:layout_marginRight="@dimen/mal_baseline"
                    android:layout_marginEnd="@dimen/mal_baseline"
                    android:layout_marginTop="@dimen/mal_baseline"
                    android:layout_marginBottom="@dimen/mal_baseline_half"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:text="@string/time_and_date"
                    tools:text="Czas i data" />

            <LinearLayout
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/time_line_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/mal_baseline_half"
                    android:paddingBottom="@dimen/mal_baseline_half"
                    android:orientation="horizontal">

                <ImageView
                        android:id="@+id/mal_item_image_time"
                        android:layout_width="@dimen/mal_action_item_image_width"
                        android:layout_height="@dimen/mal_action_action_item_image_height"
                        android:layout_gravity="center"
                        android:layout_marginEnd="@dimen/mal_baseline_half"
                        android:layout_marginLeft="@dimen/mal_baseline"
                        android:layout_marginRight="@dimen/mal_baseline_half"
                        android:layout_marginStart="@dimen/mal_baseline"
                        android:src="@drawable/ic_time"
                        android:adjustViewBounds="false"
                        android:cropToPadding="false"
                        android:scaleType="centerInside" />

                <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:minHeight="@dimen/mal_action_action_item_image_height"
                        android:layout_gravity="center_vertical"
                        android:gravity="center_vertical"
                        android:layout_marginEnd="@dimen/mal_baseline"
                        android:layout_marginLeft="@dimen/mal_baseline"
                        android:layout_marginRight="@dimen/mal_baseline"
                        android:layout_marginStart="@dimen/mal_baseline"
                        android:layout_weight="1"
                        android:orientation="vertical">

                    <TextView
                            android:id="@+id/mal_item_text_time"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/time"
                            tools:text="Czas"
                            android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

                    <TextView
                            android:id="@+id/time_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            tools:text="Czas asdasd"
                            android:textAppearance="@style/TextAppearance.AppCompat.Small"
                            android:visibility="visible" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/date_line_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/mal_baseline_half"
                    android:paddingBottom="@dimen/mal_baseline_half"
                    android:orientation="horizontal">

                <ImageView
                        android:id="@+id/mal_item_image_date"
                        android:layout_width="@dimen/mal_action_item_image_width"
                        android:layout_height="@dimen/mal_action_action_item_image_height"
                        android:layout_gravity="center"
                        android:layout_marginEnd="@dimen/mal_baseline_half"
                        android:layout_marginLeft="@dimen/mal_baseline"
                        android:layout_marginRight="@dimen/mal_baseline_half"
                        android:layout_marginStart="@dimen/mal_baseline"
                        android:src="@drawable/ic_calendar"
                        android:adjustViewBounds="false"
                        android:cropToPadding="false"
                        android:scaleType="centerInside" />

                <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:minHeight="@dimen/mal_action_action_item_image_height"
                        android:layout_gravity="center_vertical"
                        android:gravity="center_vertical"
                        android:layout_marginEnd="@dimen/mal_baseline"
                        android:layout_marginLeft="@dimen/mal_baseline"
                        android:layout_marginRight="@dimen/mal_baseline"
                        android:layout_marginStart="@dimen/mal_baseline"
                        android:layout_weight="1"
                        android:orientation="vertical">

                    <TextView
                            android:id="@+id/mal_item_text_date"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/date"
                            tools:text="Data"
                            android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

                    <TextView
                            android:id="@+id/date_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            tools:text="Czas asdasd"
                            android:textAppearance="@style/TextAppearance.AppCompat.Small"
                            android:visibility="visible" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>
</merge>